# PyCanopy

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cargo/: config.toml
.github/workflows/: CI.yml  docs.yml  release.yml
api/aggregations/: index.html
api/coordinate-reference-system/: index.html
api/engine/: index.html
api/lazy-frame/: index.html
api/spatial-frame/: index.html
assets/: PyCanopy_tutorial.ipynb  spatial-bench-sf10_auto-results.txt  spatial-bench-sf1_auto-results.txt
bench/: README.md
bench/ops/: README.md  __main__.py  run.py  utils.py
bench/spatial_bench/: README.md  __main__.py  _onbox.py  _profile.py  _runner.py  aws_run.py  bootstrap.sh  check.py  config.yaml  data.py  measure.py  references.py  report.py  sedona_sql.py  utils.py
bench/spatial_bench/queries/: __init__.py  q01.py  q02.py  q03.py  q04.py  q05.py  q06.py  q07.py  q08.py  q09.py  q10.py  q11.py  q12.py
bench/spatial_bench/results/: sf1.json
bench/utils/: core.py  generators.py
benchmarks/: index.html
contributing/: index.html
docs/: api-reference.md  benchmarks.md  contributing.md  how-it-works.md  index.md  operations.md  quickstart.md
docs/api/: aggregations.md  coordinate-reference-system.md  distance-operations.md  engine.md  lazy-frame.md  spatial-frame.md
docs/how-it-works/: cost-model.md  execution-paths.md  in-memory-optimization.md  query-planner.md  streaming.md
docs/stylesheets/: extra.css
how-it-works/cost-model/: index.html
how-it-works/execution-paths/: index.html
how-it-works/in-memory-optimization/: index.html
how-it-works/query-planner/: index.html
how-it-works/streaming/: index.html
python/pycanopy/: __init__.py  agg.py  coordinates.py  engine.py  executor.py  frame.py  lazy.py  nodes.py  optimizer.py  query.py
quickstart/: index.html
search/: search_index.json
src/: lib.rs  wkb.rs
src/index/: brute.rs  grid.rs  kdtree.rs  mod.rs  rtree.rs
src/planner/: calibration.rs  cost.rs  mod.rs  selector.rs
src/query/: batch.rs  geodesy.rs  geometry.rs  join.rs  mod.rs  multipoly.rs  nearest.rs  prepared.rs  range.rs  types.rs
src/stats/: collector.rs  mod.rs  types.rs
stylesheets/: extra.css
tests/: rust.rs
tests/python/: test_agg.py  test_delta.py  test_engine.py  test_fanout.py  test_frame.py  test_geometry_ops.py  test_ingestion.py  test_joins.py  test_query.py
tests/rust/: index_tests.rs  planner_tests.rs  stats_tests.rs
