[package]
name = "pycanopy"
version = "0.1.0"
edition = "2021"

[lib]
name = "pycanopy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"
geo = "0.31"
geo-index = "0.3"
rayon = "1"
thiserror = "2"
ordered-float = "4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Fast iteration profile: maturin develop --profile dev-release
# Same as release but skips LTO and uses parallel codegen.
# Cold build ~2-3 min instead of ~10; runtime within ~10% of release.
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16

[dev-dependencies]
