[package]
name = "pycanopy"
version = "0.2.1"
edition = "2021"

[lib]
name = "pycanopy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"
geo = "0.31"
geo-index = "0.3"
rayon = "1"
thiserror = "2"
ordered-float = "4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Local dev builds: same opt-level as release but skips LTO and uses more
# codegen units to stay within 8GB RAM. Use for make check / make build.
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 8

