[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycanopy"
version = "0.2.1"
description = "Geospatial query engine with dynamic index selection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pranav Walimbe", email = "pranav1077@gmail.com" }]
keywords = ["geospatial", "spatial-index", "rtree", "kdtree", "knn", "geoarrow"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = ["pyarrow>=12.0", "numpy>=1.24", "polars>=0.20"]

[project.urls]
Repository = "https://github.com/pranavwalimbe/pycanopy"
Issues = "https://github.com/pranavwalimbe/pycanopy/issues"

[tool.maturin]
python-source = "python"
module-name = "pycanopy._core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "polars>=0.20",
    "ruff>=0.4",
    "shapely>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-x -q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pycanopy"]
