[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycanopy"
version = "0.3.0"
description = "Declarative spatial query layer for Polars"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Pranav Walimbe", email = "pranav1077@gmail.com" }]
keywords = ["geospatial", "spatial-index", "rtree", "kdtree", "knn", "geoarrow"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = ["pyarrow>=12.0", "numpy>=1.24", "polars>=0.20"]

[project.urls]
Repository = "https://github.com/pranav-walimbe/PyCanopy"
Issues = "https://github.com/pranav-walimbe/PyCanopy/issues"

[tool.maturin]
python-source = "python"
module-name = "pycanopy._core"
features = ["pyo3/extension-module"]
# Development-only trees that are tracked in git but must never ship in the
# published wheel/sdist. The wheel already only packages python-source; these
# excludes additionally keep them out of the source distribution.
exclude = ["bench/**/*", "tests/**/*", "bench", "tests"]

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=8.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "polars>=0.20",
    "ruff>=0.4",
    "shapely>=2.0",
]
# Everything bench/ needs. Core deps (numpy, polars, pyarrow) are already required.
# SedonaDB is the spatial_bench verification + timing oracle; geopandas + scipy are the
# indexed competitors in the ops bench.
bench = [
    "sedonadb>=0.3",
    "geoarrow-pyarrow>=0.2",
    "pyproj>=3.6",
    "geopandas>=1.0",
    "shapely>=2.0",
    "scipy>=1.15.3",
    "matplotlib>=3.7",
    "s3fs>=2024.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "psutil>=5.9",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-x -q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "RUF",     # ruff-specific
    "D400",    # docstring summary line ends with a period
    "PLC0415", # import-outside-top-level, keeps all imports at module level
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["pycanopy"]
